i used if con for class main-content because it makes some problems in login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,20 +29,27 @@
   </head>
 
   <body>
-    
-
     <div id="wrapper">
-
+        <% unless action_name == 'new' ||  action_name == 'edit' %>
           <%= render partial: "layouts/navbar" %>
+        <% end %>  
 
-
- 
+        <% unless action_name == 'new' ||  action_name == 'edit' %>
           <%= render partial: "layouts/sidebar" %>
-
-
-      <div id="main-content">
-            <%= yield %>
-      </div>
+        <% end %>
+        <% if current_user.present? %>
+            <div id="main-content">
+              <% if notice %>
+                <p class="alert alert-success"><%= notice %></p>
+              <% end %>
+              <% if alert %>
+                <p class="alert alert-danger"><%= alert %></p>
+              <% end %>
+              <%= yield %>
+            </div>
+        <% else %>
+          <%= yield %>
+        <% end %>
     </div>
 
 
