--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,13 +4,18 @@
             <img src="/images/user.png" class="rounded-circle user-photo" alt="User Profile Picture">
             <div class="dropdown">
                 <span>Welcome,</span>
-                <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>Jessica Doe</strong></a>                    
+                <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown">
+                    <strong>
+                    </strong>
+                </a>                    
                 <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
                     <li><a href="page-profile2.html"><i class="icon-user"></i>My Profile</a></li>
                     <li><a href="app-inbox.html"><i class="icon-envelope-open"></i>Messages</a></li>
                     <li><a href="javascript:void(0);"><i class="icon-settings"></i>Settings</a></li>
                     <li class="divider"></li>
-                    <li><a href="page-login.html"><i class="icon-power"></i>Logout</a></li>
+                    <li>
+                        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+                    </li>
                 </ul>
             </div>
             <hr>
