--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,63 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row clearfix">
+    <div class="col-lg-2 col-md-12">
+    </div>
+    <div class="col-lg-5 col-md-12">
+        <div class="card">
+            <div class="body">
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+                    <%= render "devise/shared/error_messages", resource: resource %>
+                    <div class="card profile-header">                      
+                        <div class="row">
+                            <div class="col-sm-2">
+                                
+                            </div>
+                            <div class="col-sm-10">
+                                <div class="form-group">
+                                    <%= f.label :avatar, "Choose Your Photo" %>
+                                    <%= f.file_field :avatars, multiple: true %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="col-lg-12 col-md-12">
+                            <h6>Account Data</h6>
+                            <div class="form-group">
+                                <%= f.text_field :name, class: "form-control",  placeholder: "Username" %>
+                            </div>
+                            <div class="form-group">
+                                <%= f.text_field :phone, class: "form-control",  placeholder: "Update Your Phone" %>
+                            </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+                            <div class="form-group">
+                                <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder:"Email" %>
+                            </div>
+                        </div>
+                        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                        <% end %>
+                        <div class="col-lg-12 col-md-12">
+                            <h6>Change Password</h6>
+                            <div class="form-group">
+                                <%= f.password_field :current_password, class: "form-control", autocomplete: "Password", placeholder:"Current Password" %>
+                            </div>
+                            <div class="form-group">
+                                <%= f.password_field :password, class: "form-control", autocomplete: "password", placeholder:"New Password" %>
+                                <% if @minimum_password_length %>
+                                <br />
+                                <em><%= @minimum_password_length %> characters minimum</em>
+                                <% end %>
+                            </div>
+                            <div class="form-group">
+                                <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "Password", placeholder:"Password Confirmation" %>
+                            </div>
+                            <div class="form-group">
+                                <%= f.submit "Update", class:"btn btn-primary" %>
+                            </div>
+                        </div>
+                    </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
