--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,10 +6,11 @@
                 <span>Welcome,</span>
                 <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown">
                     <strong>
+                        <%= current_user.name %>
                     </strong>
                 </a>                    
                 <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
-                    <li><a href="page-profile2.html"><i class="icon-user"></i>My Profile</a></li>
+                    <li><a href="<%= edit_user_registration_path %>"><i class="icon-user"></i>My Profile</a></li>
                     <li><a href="app-inbox.html"><i class="icon-envelope-open"></i>Messages</a></li>
                     <li><a href="javascript:void(0);"><i class="icon-settings"></i>Settings</a></li>
                     <li class="divider"></li>
@@ -17,21 +18,6 @@
                         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
                     </li>
                 </ul>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-4">
-                    <h6>5+</h6>
-                    <small>Experience</small>                        
-                </div>
-                <div class="col-4">
-                    <h6>400+</h6>
-                    <small>Employees</small>                        
-                </div>
-                <div class="col-4">                        
-                    <h6>80+</h6>
-                    <small>Clients</small>
-                </div>
             </div>
         </div>
         <!-- Nav tabs -->
@@ -47,11 +33,11 @@
             <div class="tab-pane animated fadeIn active" id="hr_menu">
                 <nav class="sidebar-nav">
                     <ul class="main-menu metismenu">
-                        <li class="active"><a href="index.html"><i class="icon-speedometer"></i><span>HR Dashboard</span></a></li>
+                        <li class="active"><a href="<%= root_path %>"><i class="icon-speedometer"></i><span>HR Dashboard</span></a></li>
                         <li><a href="app-holidays.html"><i class="icon-list"></i>Holidays</a></li>
                         <li><a href="app-events.html"><i class="icon-calendar"></i>Events</a></li>
-                        <li><a href="app-activities.html"><i class="icon-badge"></i>Activities</a></li>
-                        <li><a href="app-social.html"><i class="icon-globe"></i>HR Social</a></li>
+                        <li><a href="<%= governorates_path %>"><i class="icon-badge"></i>Governorates</a></li>
+                        <li><a href="<%= cities_path %>"><i class="icon-globe"></i>Cities</a></li>
                         <li>
                             <a href="#Employees" class="has-arrow"><i class="icon-users"></i><span>Employees</span></a>
                             <ul>
