edits on root page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- VENDOR CSS -->
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
     <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="/vendor/chartist/css/chartist.min.css">
@@ -22,6 +23,7 @@
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/blog.css">
     <link rel="stylesheet" href="/assets/css/color_skins.css">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -63,6 +65,8 @@
 
     <script src="/assets/bundles/mainscripts.bundle.js"></script>
     <script src="/assets/js/index.js"></script>
+
+    <script src="/assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
 
   </body>
 </html>
