css edites on  sidebar

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -33,7 +33,7 @@
             <div class="tab-pane animated fadeIn active" id="hr_menu">
                 <nav class="sidebar-nav">
                     <ul class="main-menu metismenu">
-                        <li class="active"><a href="<%= root_path %>"><i class="icon-speedometer"></i><span>HR Dashboard</span></a></li>
+                        <li><a href="<%= root_path %>"><i class="icon-speedometer"></i><span>HR Dashboard</span></a></li>
                         <li><a href="app-holidays.html"><i class="icon-list"></i>Holidays</a></li>
                         <li><a href="app-events.html"><i class="icon-calendar"></i>Events</a></li>
                         <li><a href="<%= governorates_path %>"><i class="icon-badge"></i>Governorates</a></li>
