add active storage.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,12 +9,11 @@
                     <div class="card profile-header">                      
                         <div class="row">
                             <div class="col-sm-2">
-                                
                             </div>
                             <div class="col-sm-10">
                                 <div class="form-group">
                                     <%= f.label :avatar, "Choose Your Photo" %>
-                                    <%= f.file_field :avatars, multiple: true %>
+                                    <%= f.file_field :avatar %>
                                 </div>
                             </div>
                         </div>
