--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,9 @@
 <div id="left-sidebar" class="sidebar">
     <div class="sidebar-scroll">
         <div class="user-account">
-            <img src="/images/user.png" class="rounded-circle user-photo" alt="User Profile Picture">
+            <% if current_user.avatar.attached? %>
+                <%= image_tag current_user.avatar, class: "rounded-circle user-photo" %>
+            <% end %>
             <div class="dropdown">
                 <span>Welcome,</span>
                 <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown">
