--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,9 @@
                     <div class="card profile-header">                      
                         <div class="row">
                             <div class="col-sm-2">
+                                <% if current_user.avatar.attached? %>
+                                    <%= image_tag current_user.avatar, style:"width: 60px;", class: "rounded-circle user-photo" %>
+                                <% end %>
                             </div>
                             <div class="col-sm-10">
                                 <div class="form-group">
