--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,7 @@
                         <div class="row">
                             <div class="col-sm-2">
                                 <% if current_user.avatar.attached? %>
-                                    <%= image_tag current_user.avatar, style:"width: 60px;", class: "rounded-circle user-photo" %>
+                                <%= image_tag current_user.avatar, style:"width: 60px; height: 70px;", class: "rounded-circle user-photo" %>
                                 <% end %>
                             </div>
                             <div class="col-sm-10">
@@ -55,6 +55,9 @@
                             </div>
                             <div class="form-group">
                                 <%= f.submit "Update", class:"btn btn-primary" %>
+                            </div>
+                            <div class="form-group">
+                                <%= link_to 'Back', :back %>
                             </div>
                         </div>
                     </div>
