--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -91,8 +91,8 @@
                             <li><a href="javascript:void(0);"><i class="icon-bell"></i> <span>Notifications</span></a></li>
                             <li class="menu-heading">BILLING</li>
                             <li><a href="javascript:void(0);"><i class="icon-credit-card"></i> <span>Payments</span></a></li>
-                            <li><a href="javascript:void(0);"><i class="icon-printer"></i> <span>Invoices</span></a></li>                                
-                            <li><a href="javascript:void(0);"><i class="icon-refresh"></i> <span>Renewals</span></a></li>
+                            <li><a href="javascript:void(0);"><span><%= link_to 'English', root_path(locale: :en) %></span></a></li>                                
+                            <li><a href="javascript:void(0);"><span><%= link_to 'العربية', root_path(locale: :ar) %></span></a></li>
                         </ul>
                     </li>
                     
