--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,10 +41,10 @@
         <% end %>
         <% if current_user.present? %>
                <% if notice %>
-                <p class="alert alert-success"><%= notice %></p>
+                <p class="alert"><%= notice %></p>
               <% end %>
               <% if alert %>
-                <p class="alert alert-danger"><%= alert %></p>
+                <p class="alert"><%= alert %></p>
               <% end %>
               <%= yield %>
             </div>
@@ -60,7 +60,7 @@
 
     <script src="/vendor/toastr/toastr.js"></script>
     <script src="/assets/bundles/chartist.bundle.js"></script>
-    <script src="/assets/bundles/knob.bundle.js"></script> <!-- Jquery Knob-->
+    <script src="/assets/bundles/knob.bundle.js"></script>
 
     <script src="/assets/bundles/mainscripts.bundle.js"></script>
     <script src="/assets/js/index.js"></script>
