Changed Created At to Created Date in table head in City IU

--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -52,7 +52,7 @@
                                         <th>#</th>
                                         <th>City Name</th>
                                         <th>Governorate</th>
-                                        <th>Created At</th>
+                                        <th>Created Date</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
