--- a/app/views/dashboards/root.html.erb
+++ b/app/views/dashboards/root.html.erb
@@ -7,90 +7,144 @@
                 </div> 
             </div>
         </div>
+
         <div class="row clearfix">
-            <div class="col-lg-3 col-md-6">
-                <div class="card top_counter">
-                    <div class="body">
-                        <div class="icon"><i class="fa fa-user"></i> </div>
-                        <div class="content">
-                            <div class="text">New Employee</div>
-                            <h5 class="number">22</h5>
-                        </div>
-                        <hr>
-                        <div class="icon"><i class="fa fa-users"></i> </div>
-                        <div class="content">
-                            <div class="text">Total Employee</div>
-                            <h5 class="number">425</h5>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card text-center bg-info">
+                        <div class="body">
+                            <div class="p-15 text-light">
+                                <h3>19</h3>
+                                <span>Total Cases IN Egypt</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="card top_counter">
-                    <div class="body">
-                        <div class="icon"><i class="fa fa-university"></i> </div>
-                        <div class="content">
-                            <div class="text">Total Salary</div>
-                            <h5 class="number">$2.8M</h5>
-                        </div>
-                        <hr>
-                        <div class="icon"><i class="fa fa-university"></i> </div>
-                        <div class="content">
-                            <div class="text">Avg. Salary</div>
-                            <h5 class="number">$1,250</h5>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card text-center bg-secondary">
+                        <div class="body">
+                            <div class="p-15 text-light">
+                                <h3>15</h3>
+                                <span>Egypt Governorates</span>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card text-center bg-warning">
+                        <div class="body">
+                            <div class="p-15 text-light">
+                                <h3>125</h3>
+                                <span>Total Diseases IN Egypt</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card text-center bg-dark">
+                        <div class="body">
+                            <div class="p-15 text-light">
+                                <h3>318</h3>
+                                <span>Egypt Cities</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
             </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="card text-center">
-                    <div class="body">
-                        <h5>Income Analysis</h5>
-                        <span>8% High then last month</span>
-                        <div class="sparkline-pie m-t-20">6,4,8</div>
-                        <div class="stats-report m-b-30">
-                            <div class="stat-item">
-                            <h5>Design</h5>
-                            <b class="col-black">84.60%</b></div>
-                            <div class="stat-item">
-                            <h5>Dev</h5>
-                            <b class="col-black">15.40%</b></div>
-                            <div class="stat-item">
-                            <h5>SEO</h5>
-                            <b class="col-black">5.10%</b></div>
-                        </div>
-                        <span id="sparkline-compositeline">8,4,0,0,0,0,1,4,4,10,10,10,10,0,0,0,4,6,5,9,10</span>
-                    </div>
-                </div>                    
-            </div>
-            <div class="col-lg-6 col-md-12">
-                <div class="card">
-                    <div class="header">
-                        <h2>Salary Statistics</h2>
-                        <ul class="header-dropdown">
-                            <li><a class="tab_btn" href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Weekly">W</a></li>
-                            <li><a class="tab_btn" href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Monthly">M</a></li>
-                            <li><a class="tab_btn active" href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Yearly">Y</a></li>
-                            <li class="dropdown">
-                                <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"></a>
-                                <ul class="dropdown-menu dropdown-menu-right animated bounceIn">
-                                    <li><a href="javascript:void(0);">Action</a></li>
-                                    <li><a href="javascript:void(0);">Another Action</a></li>
-                                    <li><a href="javascript:void(0);">Something else</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="body">
-                        <div id="Salary_Statistics" class="chartist"></div>
-                    </div>
-                </div>
-            </div>                
-        </div>
 
         <div class="row clearfix">
             <div class="col-lg-8 col-md-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Total Salary by Unit</h2>
+                        <h2>Most 5 Spread Cities For Diseases</h2>
+                    </div>
+                    <div class="body">
+                        <div class="table-responsive">
+                            <table class="table table-hover m-b-0">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>City Name</th>
+                                        <th>Disease Name</th>
+                                        <th>Cases</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <h6 class="m-b-0">City ID</h6>
+                                        </td>
+                                        <td>
+                                            <h6 class="margin-0">City Name</h6>
+                                            <span>In "Governorate Name"</span>
+                                        </td>
+                                        <td>
+                                            <h6 class="m-b-0">Disease Name</h6>
+                                            <span class="text-muted">Contagious?</span>
+                                        </td>
+                                        <td class="text-right">
+                                            <div class="text-muted">Cases Count</div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="body">
+                    <div class="list-group list-widget">
+                        <a href="app-inbox.html" class="list-group-item">
+                            <span class="badge badge-success">654</span>
+                            <i class="fa fa-envelope text-muted"></i>
+                            Inbox
+                        </a>
+                    </div>
+                    </div>
+                </div>
+            </div>  
+        </div>
+
+        <div class="row clearfix">
+            <div class="col-xl-4 col-lg-12 col-md-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Marketing Campaign <small>This Month </small></h2>                            
+                    </div>
+                    <div class="body">
+                        <div class="table-responsive">
+                            <table class="table table-hover m-b-0">
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <i class="fa fa-facebook fa-2x"></i>
+                                        </td>
+                                        <td>
+                                            <h6 class="margin-0">Facebook Ads</h6>
+                                            <span>1.2k Likes, 418 Shares</span>
+                                        </td>
+                                        <td>
+                                            <h6 class="m-b-0">$ 402</h6>
+                                            <span class="text-muted">Spent</span>
+                                        </td>
+                                        <td class="text-right">
+                                            <div class="text-success">
+                                                23 <i class="fa fa-long-arrow-up"></i>
+                                            </div>
+                                            <div class="text-muted">up</div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-lg-8 col-md-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Coronavirus infection rate</h2>
                         <ul class="header-dropdown">
                             <li><a class="tab_btn" href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Weekly">W</a></li>
                             <li><a class="tab_btn" href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Monthly">M</a></li>
@@ -110,56 +164,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
-                <div class="card">
-                    <div class="header">
-                        <h2>ToDo List</h2>
-                    </div>
-                    <div class="body todo_list">
-                        <ul class="list-unstyled">
-                            <li>
-                                <label class="fancy-checkbox mb-0">
-                                    <input type="checkbox" name="checkbox" checked>
-                                    <span>New Employee intro</span>
-                                </label>
-                                <div class="m-l-35 m-b-30">
-                                    <small class="text-muted">SCHEDULED FOR 3:00 P.M. ON JUN 2018</small>
-                                </div>
-                            </li>
-                            <li>
-                                <label class="fancy-checkbox mb-0">
-                                    <input type="checkbox" name="checkbox">
-                                    <span>Send email to CEO</span>
-                                </label>
-                                <div class="m-l-35 m-b-30">
-                                    <small class="text-muted">SCHEDULED FOR 4:30 P.M. ON JUN 2018</small>
-                                </div>
-                            </li>
-                            <li>
-                                <label class="fancy-checkbox mb-0">
-                                    <input type="checkbox" name="checkbox">
-                                    <span>New Joing Employee Welcome kit</span>
-                                </label>
-                                <div class="m-l-35 m-b-30">
-                                    <small><a href="#">John Smith</a> Designer</small><br>
-                                    <small><a href="#">Hossein Shams</a> Developer</small><br>
-                                    <small><a href="#">Maryam Amiri</a> SEO</small><br>
-                                    <small><a href="#">Mike Litorus</a> iOS Developer</small>
-                                </div>
-                            </li>
-                            <li>
-                                <label class="fancy-checkbox mb-0">
-                                    <input type="checkbox" name="checkbox">
-                                    <span>Birthday Wish</span>
-                                </label>
-                                <div class="m-l-35">
-                                    <small class="text-muted">SCHEDULED FOR 4:30 P.M. ON JUN 2018</small>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>                
         </div>
 
         <div class="row">
@@ -182,39 +186,10 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><img src="/images/xs/avatar1.jpg" class="rounded-circle width35" alt=""></td>
+                                        <td><img src="/images/governorate.png" class="rounded-circle width35" alt=""></td>
                                         <td>Marshall Nichols</td>
                                         <td><span>UI UX Designer</span></td>
                                         <td><span class="badge badge-success">Good</span></td>
-                                        <td><span class="sparkbar">5,8,6,3,5,9,2</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="/images/xs/avatar2.jpg" class="rounded-circle width35" alt=""></td>
-                                        <td>Susie Willis</td>
-                                        <td><span>Designer</span></td>
-                                        <td><span class="badge badge-warning">Average</span></td>
-                                        <td><span class="sparkbar">2,1,3,-3,5,9,2</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="/images/xs/avatar3.jpg" class="rounded-circle width35" alt=""></td>
-                                        <td>Francisco Vasquez</td>
-                                        <td><span>Team Leader</span></td>
-                                        <td><span class="badge badge-primary">Excellent</span></td>
-                                        <td><span class="sparkbar">5,8,6,3,5,9,2</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="/images/xs/avatar4.jpg" class="rounded-circle width35" alt=""></td>
-                                        <td>Erin Gonzales</td>
-                                        <td><span>Android Developer</span></td>
-                                        <td><span class="badge badge-danger">Weak</span></td>
-                                        <td><span class="sparkbar">2,-5,3,-6,-4,8,-1</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="/images/xs/avatar5.jpg" class="rounded-circle width35" alt=""></td>
-                                        <td>Ava Alexander</td>
-                                        <td><span>UI UX Designer</span></td>
-                                        <td><span class="badge badge-success">Good</span></td>
-                                        <td><span class="sparkbar">5,8,6,3,5,9,-2</span></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -222,20 +197,38 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-5">
-                <div class="card">
-                    <div class="header">
-                        <h2>Employee Structure</h2>
+            <div class="col-lg-4 col-md-12">
+                    <div class="card top_counter">
+                        <div class="body">
+                            <div class="icon"><i class="fa fa-user"></i> </div>
+                            <div class="content">
+                                <div class="text">New Employee</div>
+                                <h5 class="number">22</h5>
+                            </div>
+                            <hr>
+                            <div class="icon"><i class="fa fa-users"></i> </div>
+                            <div class="content">
+                                <div class="text">Total Employee</div>
+                                <h5 class="number">425</h5>
+                            </div>
+                        </div>
                     </div>
-                    <div class="body text-center">
-                        <h6>Male</h6>
-                        <input type="text" class="knob2" data-linecap="round" value="73" data-width="125" data-height="125" data-thickness="0.15" data-fgColor="#49a9e5" readonly>
-                        <hr>
-                        <h6>Female</h6>
-                        <input type="text" class="knob2" data-linecap="round" value="27" data-width="125" data-height="125" data-thickness="0.15" data-fgColor="#b880e1" readonly>
+                    <div class="card top_counter">
+                        <div class="body">
+                            <div class="icon"><i class="fa fa-university"></i> </div>
+                            <div class="content">
+                                <div class="text">Total Salary</div>
+                                <h5 class="number">$2.8M</h5>
+                            </div>
+                            <hr>
+                            <div class="icon"><i class="fa fa-university"></i> </div>
+                            <div class="content">
+                                <div class="text">Avg. Salary</div>
+                                <h5 class="number">$1,250</h5>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
+                </div>                
         </div>
     </div>
 </div>
