add hospitals, diseases, patients and cases links in UI

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -53,17 +53,17 @@
                 <nav class="sidebar-nav">
                     <ul class="main-menu metismenu">
                         <li><a href="<%= root_path %>"><i class="icon-speedometer"></i><span>DB Dashboard</span></a></li>
-                        <li><a href="app-holidays.html"><i class="icon-list"></i>Holidays</a></li>
-                        <li><a href="app-events.html"><i class="icon-calendar"></i>Events</a></li>
+                        <li><a href="<%= hospitals_path %>"><i class="icon-list"></i>Hospitals</a></li>
+                        <li><a href="<%= diseases_path %>"><i class="icon-calendar"></i>Diseases</a></li>
                         <li><a href="<%= governorates_path %>"><i class="icon-badge"></i>Governorates</a></li>
                         <li><a href="<%= cities_path %>"><i class="icon-globe"></i>Cities</a></li>
                         <li>
-                            <a href="#Employees" class="has-arrow"><i class="icon-users"></i><span>Employees</span></a>
+                            <a href="#Employees" class="has-arrow"><i class="icon-users"></i><span>Patients</span></a>
                             <ul>
-                                <li><a href="emp-all.html">All Employees</a></li>
-                                <li><a href="emp-leave.html">Leave Requests</a></li>
-                                <li><a href="emp-attendance.html">Attendance</a></li>
-                                <li><a href="emp-departments.html">Departments</a></li>
+                                <li><a href="emp-all.html">All Patients</a></li>
+                                <li><a href="emp-leave.html">New Patient</a></li>
+                                <li><a href="emp-attendance.html">All Cases</a></li>
+                                <li><a href="emp-departments.html">New Case</a></li>
                             </ul>
                         </li>
                         <li>
