--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -60,10 +60,10 @@
                         <li>
                             <a href="#Employees" class="has-arrow"><i class="icon-users"></i><span>Patients</span></a>
                             <ul>
-                                <li><a href="emp-all.html">All Patients</a></li>
-                                <li><a href="emp-leave.html">New Patient</a></li>
-                                <li><a href="emp-attendance.html">All Cases</a></li>
-                                <li><a href="emp-departments.html">New Case</a></li>
+                                <li><a href="<%= patients_path %>">All Patients</a></li>
+                                <li><a href="<%= new_patient_path %>">New Patient</a></li>
+                                <li><a href="<%= cases_path %>">All Cases</a></li>
+                                <li><a href="<%= new_case_path %>">New Case</a></li>
                             </ul>
                         </li>
                         <li>
